# rust_auth

./: .gitignore  Cargo.toml  README.md
authApp/: Cargo.toml
authApp/src/: app.rs  main.rs  route.rs
authApp/src/db/: mod.rs
authApp/src/domain/: infra.rs  mod.rs  realm.rs
authApp/src/repository/: mod.rs  realm.rs
authApp/src/resource/: mod.rs
authApp/src/service/: mod.rs
docker/: auth_service.dockerfile  docker-compose.yml
docker/sql/: init-scheme.sql
src/: main.rs  route.rs
src/db/: mod.rs
src/domain/: infra.rs  mod.rs  realm.rs
src/repository/: mod.rs  realm.rs
src/resource/: mod.rs
src/service/: mod.rs
