[package]
name = "authenticator"
version = "0.1.0"
authors = ["RuRu92 <Ru_Ru3000@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1", features = ["derive"] }
#diesel = { version = "1.4.4", features = ["mysql"] }
#diesel = { version = "1.4.4", features = ["mysql"] }
mysql = "*"
dotenv = "0.15.0"
uuid = { version = "0.8.2", features = ["v4"] }
strum = "0.20"
strum_macros = "0.20"
rand = "0.8.3"
#domain = {path = "src/domain.rs"}