[package]
name = "authenticator"
version = "0.1.0"
authors = ["RuRu92 <Ru_Ru3000@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1", features = ["derive"] }
#diesel = { version = "1.4.4", features = ["mysql"] }
#diesel = { version = "1.4.4", features = ["mysql"] }
mysql = "*"
dotenv = "0.15.0"
uuid = { version = "1.3.2", features = ["v4"] }
strum = "0.24.1"
strum_macros = "0.24.3"
rand = "0.8.3"
jsonwebtoken = "8.3.0"
#domain = {path = "src/domain.rs"}