[package]
name = "authenticator"
version = "0.1.0"
authors = ["RuRu92 <Ru_Ru3000@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-rt = "2.9.0"
serde = { version = "1", features = ["derive"] }
#diesel = { version = "1.4.4", features = ["mysql"] }
#diesel = { version = "1.4.4", features = ["mysql"] }
mysql = "*"
dotenv = "0.15.0"
uuid = { version = "1.3.2", features = ["v4"] }
strum = "0.25.0"
strum_macros = "0.25.3"
rand = "0.8.3"
jsonwebtoken = "9.2.0"
ring = "0.17.7"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10.6"
data-encoding = "2.3.3"
log = "0.4.14"
