[package]
name = "authenticator"
version = "0.1.0"
authors = ["RuRu92 <Ru_Ru3000@hotmail.co.uk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-rt = "2.9.0"
serde = { version = "1", features = ["derive"] }
#diesel = { version = "1.4.4", features = ["mysql"] }
#diesel = { version = "1.4.4", features = ["mysql"] }
mysql = "*"
mysql_common = "0.35.3"
dotenv = "0.15.0"
uuid = { version = "1.3.2", features = ["v4"] }
strum = "0.27.0"
strum_macros = "0.27.0"
rand = "0.9.0"
jsonwebtoken = "9.2.0"
ring = "0.17.7"
rand_core = { version = "0.9.0", features = ["std"] }
serde_json = "*"
sha2 = "0.10.6"
data-encoding = "2.3.3"
log = "0.4.14"
chrono = "0.4.38"
pbkdf2 = { version = "0.12.2", features = ["simple"] }
thiserror = "2.0.11"
